# media_x

./: build.gradle  opengles.md  opensles.md
app/: build.gradle  native.cpp
app/src/files/: FFmpegMusic.cpp  muxing.c  native-lib-1.cpp  native-lib.cpp  player.cpp  test-opensl-es.cpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  toolchain-armv7a.cmake
app/src/main/cpp/include/: OpenSLESPlayer.h  OpenSLESRecoder.h  com_xxx_media_Media.h  log.h
app/src/main/cpp/src/: AAC.cpp  FFmpegMusic.cpp  H264.cpp  OpenSLESPlayer.cpp  OpenSLESRecoder.cpp  PCM.cpp  YUV_Y_U_V.cpp  audio.cpp  native-lib.cpp  native.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
app/src/main/java/com/xxx/media/: App.java  Constant.java  FFmpegVideoView.java  MainActivity.java  Media.java  MusicPlay.java  Test.java
app/src/main/java/com/xxx/media/activity/: BaseActivity.java  FilterActivity.java  H264Activity.java  HomeActivity.java  MainActivity.java  MediaRecorderActivity.java  OpenGLActivity.java  TestActivity1.java  TestAudioOpenSLActivity.java  TestAudioPlayerActivity.java  TestVideoPlayerActivity.java
app/src/main/java/com/xxx/media/opengl/: BackgroundRender.java  BaseRenderer.java  EquicruralTriangleRender.java  MyRenderer.java  Square.java  TriangleColorRender.java  TriangleRender.java
app/src/main/java/com/xxx/media/view/: FFmpegVideoView.java
app/src/main/res/layout/: activity_filter.xml  activity_h264.xml  activity_home.xml  activity_main.xml  activity_media_recorder.xml  activity_open_gl.xml  activity_test1.xml  activity_test_audio_player.xml  activity_test_video_player.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
